[project]
name = "unipd2026-cpp"
version = "0.1.0"
description = "Coverage Path Planning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio[ffmpeg]==2.37.2",
    "matplotlib==3.10.5",
    "networkx==3.5",
    "numpy==2.2.6",
    "open3d==0.19.0",
    "opencv-python==4.12.0.88",
    "pandas==2.3.1",
    "pulp[open-py]==3.2.2",
    "pyransac3d==0.6.0",
    "pyvista==0.45.3",
    "scikit-learn==1.7.1",
    "shapely==2.1.1",
    "tqdm==4.67.1",
]
